language/move-lang/tests/move_check/borrows/borrow_local_full_invalid.exp
error: 

    ┌── tests/move_check/borrows/borrow_local_full_invalid.move:14:9 ───
    │
 14 │         *y;
    │         ^^ Invalid dereference.
    ·
 12 │         let x = &mut v;
    │                 ------ It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/borrow_local_full_invalid.move:18:17 ───
    │
 18 │         let y = id_mut(&mut v);
    │                 ^^^^^^^^^^^^^^ Invalid usage of reference as function argument. Cannot transfer a mutable reference that is being borrowed
    ·
 17 │         let x = &mut v;
    │                 ------ It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/borrow_local_full_invalid.move:24:9 ───
    │
 24 │         *y = 0;
    │         ^^^^^^ Invalid mutation of reference.
    ·
 22 │         let x = &v;
    │                 -- It is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/borrow_local_full_invalid.move:33:17 ───
    │
 33 │         let y = &v;
    │                 ^^ Invalid borrow of local 'v'
    ·
 32 │         let x = &mut v;
    │                 ------ It is still being mutably borrowed by this reference
    │

